// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/validate #validateProtocolMessage should return a valid protocol message object 1`] = `
Object {
  "data": Any<Object>,
  "event": "newPeer",
}
`;

exports[`utils/validate #validateRPCRequest should return a valid rpc request 1`] = `
Object {
  "data": Any<Object>,
  "procedure": Any<String>,
  "type": Any<String>,
}
`;
